--- a/WebApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/WebApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -10,7 +10,7 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h2>Use account to log in.</h2>
+                <h2>Use la cuenta asignada.</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
@@ -27,7 +27,8 @@
                     <div class="checkbox">
                         <label asp-for="Input.RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            ¿Recordarme?
+                            @*@Html.DisplayNameFor(m => m.Input.RememberMe)*@
                         </label>
                     </div>
                 </div>
