--- a/WebApp/Views/ClientesDto/Delete.cshtml
+++ b/WebApp/Views/ClientesDto/Delete.cshtml
@@ -130,6 +130,9 @@
         @if (Model.ConyugeCedulaIdentidad != null)
         {
             <div class="col-md-6 conyuge-form">
+                <hr />
+                <h4>Datos Conyuge</h4>
+
                 <dt class="col-sm-2">
                    @Html.DisplayNameFor(model => model.ConyugeCedulaIdentidad)
                 </dt>
@@ -172,6 +175,7 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.ConyugeTelefono)
                 </dd>
+                <hr />
             </div>
         }
     </dl>
