--- a/WebApp/Views/ClientesDto/Details.cshtml
+++ b/WebApp/Views/ClientesDto/Details.cshtml
@@ -104,6 +104,9 @@
         @if (Model.ConyugeCedulaIdentidad != null)
         {
             <div class="col-md-6 conyuge-form">
+                <hr />
+                <h4>Datos Conyuge</h4>
+
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.ConyugeCedulaIdentidad)
                 </dt>
@@ -146,6 +149,7 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.ConyugeTelefono)
                 </dd>
+                <hr />
             </div>
         }
     </dl>
