--- a/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
@@ -57,6 +57,10 @@
             @for (int i = 0; i < Model.AvalesDto.Count; i++)
             {
                 <div class="col-md-6 AvalesDto[i]-form">
+
+                    <hr />
+                    <h4>Datos Aval @i </h4>
+                    <hr />
                     <div class="form-group">
                         <label asp-for="AvalesDto[i].CedulaIdentidad" class="control-label"></label>
                         <input asp-for="AvalesDto[i].CedulaIdentidad" class="form-control" />
