Se actualiza validaciones de negocio

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -59,6 +59,10 @@
         <p>La presente Simulación no implica obligación para de otorgamiento de crédito simulado. La aprobación de crédito simulado queda sujeta a la verificación de antecedentes comerciales del Cliente y al cumplimiento de las políticas de crédito vigentes a la fecha de evaluación del Crédito.</p>
     </div>
 }
+else
+{
+    <h4>De momento no existen Productos Financieros simulables de modo OnLine.</h4>
+}
 
 @section Scripts {
     @{
