--- a/WebApp/Views/ClientesDto/Create.cshtml
+++ b/WebApp/Views/ClientesDto/Create.cshtml
@@ -159,6 +159,12 @@
                 <hr />
             </div>
 
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="DatosVerificados" /> @Html.DisplayNameFor(model => model.DatosVerificados)
+                </label>
+            </div>            
+
         </form>
     </div>
 </div>
@@ -199,7 +205,7 @@
                         $("#ConyugeFechaNacimiento").val('1980-01-01');
                         $("#ConyugeDomicilio").val("...");
                         $("#ConyugeCorreoElectronico").val("a@a.com");
-                        $("#ConyugeTelefono").val("1909109209");
+                        $("#ConyugeTelefono").val("+56998761234");
                     }
                 },
                 failure: function (response) {
