--- a/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/CreateStep2.cshtml
@@ -56,10 +56,11 @@
             
             @for (int i = 0; i < Model.AvalesDto.Count; i++)
             {
+                int j = i + 1;
                 <div class="col-md-6 AvalesDto[i]-form">
 
                     <hr />
-                    <h4>Datos Aval @i </h4>
+                    <h4>Datos Aval @j </h4>
                     <hr />
                     <div class="form-group">
                         <label asp-for="AvalesDto[i].CedulaIdentidad" class="control-label"></label>
