--- a/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
@@ -88,33 +88,58 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Estado)
         </dd>
-        <table>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].CedulaIdentidad)
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].Nombre)
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].Apellido)
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].FechaNacimiento)
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].Domicilio)
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].CorreoElectronico)
-                    @Html.DisplayNameFor(model => model.AvalesDto[0].Telefono)
-                </th>
-            </tr>
-            @for (int i = 0; i < Model.AvalesDto.Count; i++)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(model => model.AvalesDto[i].CedulaIdentidad)
-                        @Html.DisplayFor(model => model.AvalesDto[i].Nombre)
-                        @Html.DisplayFor(model => model.AvalesDto[i].Apellido)
-                        @Html.DisplayFor(model => model.AvalesDto[i].FechaNacimiento)
-                        @Html.DisplayFor(model => model.AvalesDto[i].Domicilio)
-                        @Html.DisplayFor(model => model.AvalesDto[i].CorreoElectronico)
-                        @Html.DisplayFor(model => model.AvalesDto[i].Telefono)
-                    </td>
-                </tr>
-            }
-        </table>
+        
+        @for (int i = 0; i < Model.AvalesDto.Count; i++)
+        {
+            int j = i + 1;
+            <hr />
+            <h4>Datos Aval @j </h4>
+            <hr />
+
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].CedulaIdentidad)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].CedulaIdentidad)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].Nombre)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].Nombre)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].Apellido)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].Apellido)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].FechaNacimiento)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].FechaNacimiento)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].Domicilio)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].Domicilio)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].CorreoElectronico)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].CorreoElectronico)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.AvalesDto[0].Telefono)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.AvalesDto[i].Telefono)
+            </dd>
+   
+        }
     </dl>
 </div>
 
