--- a/WebApp/Views/SolicitudesPrestamoDto/Edit.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Edit.cshtml
@@ -70,7 +70,13 @@
             
             @for (int i = 0; i < Model.AvalesDto.Count; i++)
             {
+                int j = i + 1;
                 <div class="col-md-6 AvalesDto[i]-form">
+
+                    <hr />
+                    <h4>Datos Aval @j </h4>
+                    <hr />
+
                     <input type="hidden" asp-for="AvalesDto[i].Id" />
                     <input type="hidden" asp-for="AvalesDto[i].PersonaId" />
                     <div class="form-group">
