--- a/WebApp/Views/Admin/Index.cshtml
+++ b/WebApp/Views/Admin/Index.cshtml
@@ -1,41 +1,53 @@
 ﻿@model IEnumerable<WebApp.Dtos.UserDto>
 @{
-    ViewData["Title"] = "READ USER";
+    ViewData["Title"] = "Lista de Usuarios";
 }
 
-<h1 class="bg-info text-white">All Users</h1>
-<a asp-action="Create" class="btn btn-secondary">Create a User</a>
+<h1>Lista de Usuarios</h1>
 
-<table class="table table-sm table-bordered">
-    <tr>
-        @*<th>ID</th>*@
-        <th>UserName</th>
-        <th>Email</th>
-        <th>PhoneNumber</th>
-        <th>Role</th>
-        <th>Update</th>
-        <th>Delete</th>
-    </tr>
-    @foreach (var user in Model)
-    {
+<a asp-action="Create" class="btn btn-success text-white">Nuevo Usuario</a>
+
+<table class="table table-striped">
+    <thead class="thead-dark">
         <tr>
-            @*<td>@user.Id</td>*@
-            <td>@user.UserName</td>
-            <td>@user.Email</td>
-            <td>@user.PhoneNumber</td>
-            <td>@user.RoleDto.Name</td>
-            <td>
-                <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@user.Id">
-                    Update
-                </a>
-            </td>
-            <td>
-                <form asp-action="Delete" asp-route-id="@user.Id" method="post">
-                    <button type="submit" class="btn btn-sm btn-danger">
-                        Delete
-                    </button>
-                </form>
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.UserName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RoleDto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmailConfirmed)
+            </th>
+            <th></th>
         </tr>
-    }
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RoleDto.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.EmailConfirmed)
+                </td>
+                <td>
+                    <div class="btn-group" role="group" aria-label="Agrupar Botones">
+                        <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Editar</a>
+                        <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.Id">Eliminar</a>
+                    </div>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
