Se actualiza validaciones de negocio

--- a/WebApp/Views/ClientesDto/Delete.cshtml
+++ b/WebApp/Views/ClientesDto/Delete.cshtml
@@ -178,6 +178,14 @@
                 <hr />
             </div>
         }
+
     </dl>
+
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.DatosVerificados)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.DatosVerificados)
+    </dd>
 
 </div>
