--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -61,7 +61,9 @@
 }
 else
 {
-    <h4>De momento no existen Productos Financieros simulables de modo OnLine.</h4>
+    <div class="text-center">
+        <h4>De momento no existen Productos Financieros simulables de modo OnLine.</h4>
+    </div>
 }
 
 @section Scripts {
