--- a/WebApp/Views/SolicitudesPrestamoDto/Delete.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Delete.cshtml
@@ -66,12 +66,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CostoTotalFinanciero)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TasaCoberturaDeudaConyuge)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TasaCoberturaDeudaConyuge)
-        </dd>
+        </dd>*@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FechaSolicitud)
         </dt>
@@ -141,8 +141,7 @@
             <dd class="col-sm-10">
                 @Html.DisplayFor(model => model.AvalesDto[i].Telefono)
             </dd>
-
-        }s
+        }
     </dl>
 
 </div>
