--- a/WebApp/Views/ClientesDto/Details.cshtml
+++ b/WebApp/Views/ClientesDto/Details.cshtml
@@ -153,5 +153,12 @@
             </div>
         }
     </dl>
+
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.DatosVerificados)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.DatosVerificados)
+    </dd>
 </div>
 
