--- a/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Details.cshtml
@@ -64,12 +64,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CostoTotalFinanciero)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TasaCoberturaDeudaConyuge)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TasaCoberturaDeudaConyuge)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaSolicitud)
         </dt>
