--- a/WebApp/Views/SolicitudesPrestamoDto/Edit.cshtml
+++ b/WebApp/Views/SolicitudesPrestamoDto/Edit.cshtml
@@ -67,7 +67,8 @@
                 <label asp-for="Estado" class="control-label"></label>
                 <input asp-for="Estado" class="form-control" readonly />
             </div>
-            
+
+            <input type="hidden" asp-for="CantidadAvales" />
             @for (int i = 0; i < Model.AvalesDto.Count; i++)
             {
                 int j = i + 1;
